--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,18 @@
     <properties>
         <java.version>1.8</java.version>
         <kotlin.version>1.3.71</kotlin.version>
+        <skip.spring-boot.plugin>true</skip.spring-boot.plugin>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>${skip.spring-boot.plugin}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
